--- a/package.json
+++ b/package.json
@@ -43,7 +43,18 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.25.1",
+    "postcss": "^8.5.6",
+    "postcss-load-config": "^6.0.1",
+    "sass": "^1.93.2",
+    "svelte": "5.41.1",
+    "svelte-check": "^4.3.2",
+    "svelte-preprocess": "^6.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite-plugin-sass-dts": "^1.3.31"
+  },
+  "dependencies": {
+    "@types/pluralize": "^0.0.33",
+    "pluralize": "^8.0.0"
   }
 }
