event-handler handle onDrop

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://mili:kiki@localhost:5432/forms?schema=public"
+DATABASE_URL=postgresql://mili:kiki@localhost:5432/forms?schema=public
 SECRET_APT_KEY="kiki:kiki@localhost:5432
 SECRET_APT_ENV=development
 SECRET_API_KEY=1234567890
