--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
+    "@types/node": "25.0.3",
     "@types/vscode": "^1.105.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
@@ -46,7 +46,7 @@
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
     "sass": "^1.93.2",
-    "svelte": "5.44.1",
+    "svelte": "5.46.1",
     "svelte-check": "^4.3.2",
     "svelte-preprocess": "^6.0.3",
     "ts-node": "^10.9.2",
